--- a/credentials.yaml
+++ b/credentials.yaml
@@ -1,5 +1,6 @@
 mysql_host: 'localhost'
 mysql_user: 'root'
 # Enter your password in field below
-mysql_password: '2pml3xtd10A#'
+# mysql_password: '2pml3xtd10A#'
+mysql_password: 'mySQLs3rv3r!'
 mysql_db: 'alumni'
