Homepage buttons separated, favicon added

--- a/credentials.yaml
+++ b/credentials.yaml
@@ -1,7 +1,7 @@
 mysql_host: 'localhost'
 mysql_user: 'root'
 # Enter your password in field below
-# # mysql_password: '2pml3xtd10A#'
+mysql_password: '2pml3xtd10A#'
 # mysql_password: 'mySQLs3rv3r!'
-mysql_password: 'password'
+# mysql_password: 'password'
 mysql_db: 'alumni'
