--- a/credentials.yaml
+++ b/credentials.yaml
@@ -1,6 +1,8 @@
 mysql_host: 'localhost'
-mysql_user: 'root'
+mysql_user1: 'root'
+mysql_user2: 'stud'
 # Enter your password in field below
-# mysql_password: '2pml3xtd10A#'
-mysql_password: 'mySQLs3rv3r!'
+mysql_password1: 'mySQLs3rv3r!'
+mysql_password2: 'stud3ntp@$$'
 mysql_db: 'alumni'
+login_db: 'users'
