--- a/credentials.yaml
+++ b/credentials.yaml
@@ -1,8 +1,10 @@
 mysql_host: 'localhost'
 mysql_user1: 'root'
-mysql_user2: 'stud'
+mysql_user2: 'Student'
+mysql_user3: 'employee'
 # Enter your password in field below
-mysql_password1: 'mySQLs3rv3r!'
-mysql_password2: 'stud3ntp@$$'
+mysql_password1: 'YourPass'
+mysql_password2: 'Pass@1234'
+mysql_password3: 'Pass@5678'
 mysql_db: 'alumni'
 login_db: 'users'
