--- a/credentials.yaml
+++ b/credentials.yaml
@@ -1,9 +1,9 @@
 mysql_host: 'localhost'
 mysql_user1: 'root'
-mysql_user2: 'Student'
+mysql_user2: 'student'
 mysql_user3: 'employee'
 # Enter your password in field below
-mysql_password1: 'YourPass'
+mysql_password1: '@Inder2005'
 mysql_password2: 'Pass@1234'
 mysql_password3: 'Pass@5678'
 mysql_db: 'alumni'
