--- a/credentials.yaml
+++ b/credentials.yaml
@@ -3,8 +3,7 @@ mysql_user1: 'root'
 mysql_user2: 'student'
 mysql_user3: 'employee'
 # Enter your password in field below
-# mysql_password1: 'mySQLs3rv3r!'
-mysql_password1: 'Kalash@0309'
+mysql_password1: 'YourPass'
 mysql_password2: 'Pass@1234'
 mysql_password3: 'Pass@5678'
 mysql_db: 'alumni'
